--- a/common/pom.xml
+++ b/common/pom.xml
@@ -67,6 +67,12 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
 
+        <!-- 引入 Spring Cloud Alibaba Dubbo 相关依赖，实现呢 Dubbo 进行远程调用，并实现对其的自动配置 -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-dubbo</artifactId>
+        </dependency>
+
         <!-- 引入 Lombok 依赖 -->
         <dependency>
             <groupId>org.projectlombok</groupId>
