--- a/consumer/src/main/resources/application.yaml
+++ b/consumer/src/main/resources/application.yaml
@@ -1,3 +1,7 @@
+server:
+  port: 28080 # 服务器端口。默认为 8080
+
+
 spring:
   application:
     name: demo-consumer # Spring 应用名
@@ -20,5 +24,16 @@ spring:
     password: m91byqJarBhYeq0j
     virtual-host: java_pay
 
-server:
-  port: 28080 # 服务器端口。默认为 8080
+
+
+
+# Dubbo 配置项，对应 DubboConfigurationProperties 类
+dubbo:
+  # Dubbo 服务注册中心配置，对应 RegistryConfig 类
+  registry:
+    address: spring-cloud://118.24.149.206:8848 # 指定 Dubbo 服务注册中心的地址
+  # Spring Cloud Alibaba Dubbo 专属配置项，对应 DubboCloudProperties 类
+  cloud:
+    subscribed-services: demo-provider # 设置订阅的应用列表，默认为 * 订阅所有应用。
+
+
