--- a/provider/pom.xml
+++ b/provider/pom.xml
@@ -12,6 +12,11 @@
     <artifactId>provider</artifactId>
 
 
+    <properties>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+    </properties>
+
 
     <dependencies>
 
@@ -23,6 +28,12 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <!-- 引入 api 依赖 -->
+        <dependency>
+            <groupId>com.lmh</groupId>
+            <artifactId>api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
@@ -33,6 +44,15 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+
 </project>
