--- a/provider/src/main/resources/application.yaml
+++ b/provider/src/main/resources/application.yaml
@@ -25,7 +25,7 @@ spring:
 # Dubbo 配置项，对应 DubboConfigurationProperties 类
 dubbo:
   scan:
-    base-packages: com.lmh.spa.provider.service; # 指定 Dubbo 服务实现类的扫描基准包
+    base-packages: com.lmh.spa.provider.service.impl; # 指定 Dubbo 服务实现类的扫描基准包
   # Dubbo 服务暴露的协议配置，对应 ProtocolConfig Map
   protocols:
     dubbo:
